Fix color contrast on Browse by Decade buttons

--- a/app/assets/stylesheets/global/african_poetics.scss
+++ b/app/assets/stylesheets/global/african_poetics.scss
@@ -620,8 +620,12 @@ svg path.re {
   }
 }
 
+// Badges 
+
 .badge-decade {
   vertical-align: text-bottom;
+  background-color: $brand-success;
+  color: #fff;
 }
 
 .timeslider {
